--- a/preamble.tex
+++ b/preamble.tex
@@ -107,8 +107,13 @@
 \renewcommand{\O}{\mathcal{O}}
 \newcommand{\Z}{\mathcal{Z}}
 
+% newly-defined commands
 \newcommand{\diag}{\operatorname{diag}}
+\newcommand{\feas}{\operatorname{feas}}
 \newcommand{\crit}{\operatorname{crit}}
+\newcommand{\orep}{\mathbb{O}}
+\newcommand{\witt}{\mathfrak{W}}
+
 
 %sets
 \newcommand{\kk}{\Bbbk}
@@ -143,3 +148,7 @@
 \newcommand{\emily}[2][]{\todo[linecolor=gray,backgroundcolor=green!30!,caption={}, #1]{#2}}
 \newcommand{\daniel}[2][]{\todo[linecolor=green,backgroundcolor=blue!30!,caption={}, #1]{#2}}  
 \newcommand{\pedro}[2][]{\todo[linecolor=blue,backgroundcolor=gray!20!,caption={}, #1]{#2}} 
+
+%editing
+\renewcommand{\!}[1]{{\color{red}\text{$\star$\,}#1\,$\star$}}
+\newcommand{\ol}[1]{\overline{#1}}
