--- a/preamble.tex
+++ b/preamble.tex
@@ -144,10 +144,11 @@
 ]{todonotes}
 \newcommand{\comment}[2][]{\todo[linecolor=gray,backgroundcolor=orange!30!,caption={}, #1]{#2}} % color-name! intensity ! 
 \newcommand{\alert}[2][]{\todo[linecolor=gray,backgroundcolor=red!50!,caption={}, #1]{#2}} % color-name! intensity ! 
+\newcommand{\details}[2][]{\todo[linecolor=cyan,backgroundcolor=cyan!40, caption={},#1]{#2}} 
 
 \newcommand{\emily}[2][]{\todo[linecolor=gray,backgroundcolor=green!30!,caption={}, #1]{#2}}
 \newcommand{\daniel}[2][]{\todo[linecolor=green,backgroundcolor=blue!30!,caption={}, #1]{#2}}  
-\newcommand{\pedro}[2][]{\todo[linecolor=blue,backgroundcolor=gray!20!,caption={}, #1]{#2}} 
+\newcommand{\pedro}[2][]{\todo[linecolor=niceblue,backgroundcolor=niceblue!40,caption={}, #1]{#2}} 
 
 %editing
 \renewcommand{\!}[1]{{\color{red}\text{$\star$\,}#1\,$\star$}}
